--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <titel>prodject: Skole</titel>
+    <title>prodject: Skole</title>
     </head>
-    <style>
-    body{
-    background-color:rgb(255, 0, 0)
-    }
-    </style>
+         <style>
+        body{
+         background-color:rgb(255, 0, 0)
+            }
+        </style>
     <body>
-    <h1>
-    Første html test
-    </h1>
-    <h2>
-    Overskrift
-    </h2>
-   <p>
-   hei har du lyst til å løpe 
-   </p>
+         <h1>
+        Første html test
+        </h1>
+        <h2>
+        Overskrift
+        </h2>
+        <p>
+         hei har du lyst til å løpe 
+         </p>
    
-   </body
+    </body>
+</html>
